fix: Hide the component's overflow

--- a/packages/flip-card/src/component/FlipCard.css
+++ b/packages/flip-card/src/component/FlipCard.css
@@ -6,6 +6,7 @@
   margin: 0 !important;
   padding: 0 !important;
   background: transparent !important;
+  overflow: hidden !important;
 }
 
 .flip-card--wrapper {
